--- a/app/styles/item/form.scss
+++ b/app/styles/item/form.scss
@@ -43,8 +43,8 @@
     background: $base-yellow;
     color: #ffffff;
     border: 0 solid #d0d0d0;
-    border-radius: 24px 24px 24px 24px;
-    -moz-border-radius: 24px 24px 24px 24px;
-    -webkit-border-radius: 24px 24px 24px 24px;
+    border-radius: 24px;
+    -moz-border-radius: 24px;
+    -webkit-border-radius: 24px;
   }
 }
