--- a/app/templates/cart/index.jade
+++ b/app/templates/cart/index.jade
@@ -3,6 +3,19 @@ ion-view(
 )
   ion-nav-title
     .alt-logo
-  ion-content
-    .item(ng-repeat="item in cartVm.cart.customer_order_items track by $index")
-      | {{item.cantidad}} {{item.provider_item.descripcion}}
+  ion-content.cart-page
+    .item(ng-repeat="provider in cartVm.cart.provider_profiles track by $index")
+      .provider-items-container
+        .business-name {{provider.razon_social}}
+        slick-item(settings="cartVm.slickSettings" data="provider")
+
+  ion-footer-bar.cart-page-footer
+    action-button(
+      ng-disabled="!cartVm.cart.provider_profiles"
+      on-click="cartVm.showCheckoutModal()"
+      text="{{::('cart.buyItems'|translate)}}"
+    )
+    .total
+      | (Subtotal)
+      span.value
+        | {{cartVm.total | currency}}
