--- a/app/templates/wishlist/form.jade
+++ b/app/templates/wishlist/form.jade
@@ -19,7 +19,7 @@
            .text {{item.titulo}}
 
   label.item.item-input.item-stacked-label
-    span.input-label {{::("wishlist.dateDelivery"|translate)}}
+    span.input-label {{::("globals.dateDelivery"|translate)}}
     .row-wishlist-action
       button(
         ion-datetime-picker
