--- a/app/templates/menu/menu-provider.jade
+++ b/app/templates/menu/menu-provider.jade
@@ -9,6 +9,8 @@ ion-side-menus(enable-menu-with-back-views='false')
     ion-header-bar.bar-stable
     ion-content
       ion-list
+        ion-item(menu-close='' ui-sref='provider.profile-provider.info')
+          | {{::("menu.provider.profile"|translate)}}
         ion-item
           | {{::("menu.provider.orders"|translate)}}
         ion-item(menu-close='' ui-sref='provider.items.index')
