--- a/app/styles/item/form.scss
+++ b/app/styles/item/form.scss
@@ -38,13 +38,7 @@
 }
 
 .item-selectize{
-  .selectize-control.multi .selectize-input .item {
+  .selectize-control .selectize-input .item {
     vertical-align: middle;
-    background: $base-yellow;
-    color: #ffffff;
-    border: 0 solid #d0d0d0;
-    border-radius: 24px;
-    -moz-border-radius: 24px;
-    -webkit-border-radius: 24px;
   }
 }
