--- a/app/templates/item/show.jade
+++ b/app/templates/item/show.jade
@@ -17,8 +17,8 @@ ion-view(
           ng-click="providerItemVm.showEditModal()"
         ) {{::("globals.edit"|translate)}}
 
-    slick-wrapper(settings="providerItemVm.slickSettings")
-      .slick-container(ng-repeat="image in ::providerItemVm.providerItem.imagenes")
+    slick-wrapper(settings="providerItemVm.slickSettings" ng-if="providerItemVm.imagesLoaded")
+      .slick-container(ng-repeat="image in providerItemVm.providerItem.imagenes")
         .slick-content
           img(ng-src="{{::image.imagen_url}}")
 
