Añadir directiva de tipo de pago (#157)

--- a/app/templates/directives/payment-methods/payment-methods.jade
+++ b/app/templates/directives/payment-methods/payment-methods.jade
@@ -1,8 +1,8 @@
 ion-list
   ion-checkbox(
-    ng-repeat="method in checkedVm.methodsPayment track by $index",
+    ng-repeat="method in checkedVm.paymentMethods track by $index",
     ng-model="method.checked"
-    name="methodsPayment"
+    name="paymentMethods"
     ng-checked="method.checked"
     ng-change="checkedVm.checked(method)"
   ) {{ ::method.label }}
