--- a/app/templates/provider/partials/new_second_part.jade
+++ b/app/templates/provider/partials/new_second_part.jade
@@ -1,6 +1,6 @@
 .list.list-inset
   legend {{::("provider.formLegendSecond"|translate)}}
-  
+
   label.item.item-input.item-stacked-label(
     ng-class="{'item-error': providerVm.providerForm.telefono.$touched && providerVm.providerForm.telefono.$invalid}"
   )
@@ -42,19 +42,12 @@
     )
 
   label.item.item-input.item-stacked-label(
-    ng-class="{'item-error': providerVm.touchedPayments && providerVm.providerForm.methodsPayment.$invalid}"
+    ng-class="{'item-error': providerVm.touchedPayments && providerVm.providerForm.paymentMethods.$invalid}"
   )
     span.input-label {{::("provider.methodPayment"|translate)}}*
-    ion-list
-      ion-checkbox(
-        ng-repeat="method in providerVm.methodsPayment",
-        ng-model="method.checked"
-        name="methodsPayment"
-        ng-checked="method.checked"
-        ng-change="providerVm.checked(method)"
-      ) {{ ::method.label }}
+    payment-methods(methods="providerVm.paymentMethods" profile-form="providerVm.providerForm" touched="providerVm.touchedPayments")
   .errors-wrapper
-    span.show-errors.ng-active(ng-messages="providerVm.providerForm.methodsPayment.$invalid" ng-if="providerVm.touchedPayments && providerVm.providerForm.methodsPayment.$invalid")
+    span.show-errors.ng-active(ng-messages="providerVm.providerForm.paymentMethods.$invalid" ng-if="providerVm.touchedPayments && providerVm.providerForm.paymentMethods.$invalid")
       span.message-error(ng-message="required") {{::("form.requiredField"|translate)}}
     show-error(array-messages="providerVm.errors.formas_de_pago")
 
