hints for required fields (#156)

--- a/app/styles/forms/resource-form.scss
+++ b/app/styles/forms/resource-form.scss
@@ -12,6 +12,12 @@
     font-family: Montserrat-SemiBold;
   }
 
+  .input-label {
+    abbr {
+      margin-left: 5px;
+    }
+  }
+
   .item-error {
     border-color: $error-red;
 
