--- a/app/templates/profile/profile.jade
+++ b/app/templates/profile/profile.jade
@@ -2,7 +2,7 @@ ion-content(scroll="false")
   .profile-page
     .profile-header.responsive-sm
       .col.col-offset-25.col-50
-        img.img-profile(src="images/camera.png")
+        img.img-profile( ng-src="{{ siteVm.getUserImageURL() }}" )
       .user-name
         |{{ siteVm.userName() }}
     .profile-body
