--- a/app/styles/item/form.scss
+++ b/app/styles/item/form.scss
@@ -57,4 +57,11 @@
       }
     }
   }
+
+  .item-stacked-label textarea {
+    padding: 15px;
+    font-family: Montserrat-Light;
+    font-size: 16px;
+  }
+
 }
