--- a/app/templates/item/new-edit.jade
+++ b/app/templates/item/new-edit.jade
@@ -46,9 +46,9 @@ ion-modal-view.item-form
 
         label.item.item-input.item-stacked-label
           span.input-label {{::("item.observaciones"|translate)}}
-          input(
-            type='text'
-            ng-model='modalVm.item.observaciones'
+          textarea(
+            msd-elastic
+            ng-model="modalVm.item.observaciones"
           )
         .errors-wrapper
           show-error(array-messages='modalVm.messages.observaciones')
@@ -120,7 +120,7 @@ ion-modal-view.item-form
           ng-model='modalVm.item.en_stock'
           toggle-class='toggle-energized'
         )
-          span.input-label{{::("item.stock"|translate)}}
+          span.input-label {{::("item.stock"|translate)}}
         .errors-wrapper
           show-error(array-messages='modalVm.messages.stock')
 
