--- a/app/templates/item/new-edit.jade
+++ b/app/templates/item/new-edit.jade
@@ -125,13 +125,13 @@ ion-modal-view.item-form
           show-error(array-messages='modalVm.messages.stock')
 
         label.item.item-input.item-stacked-label
-          span.input-label {{::("item.type"|translate|uppercase)}}
+          span.input-label {{::("item.providerItemCategory"|translate|uppercase)}}
         .item-selectize
-          input(selectize
+          input(selectizeprovideritemcategory
             config ="modalVm.selectize"
             options="modalVm.categorias",
             item = "modalVm.item",
-            ng-model="modalVm.item.categorias"
+            ng-model="modalVm.item.provider_item_category_id"
             placeholder='Seleccione la categoria')
 
         label.item.item-input.item-input--no-borders.item-stacked-label
