--- a/app/templates/item/new-edit.jade
+++ b/app/templates/item/new-edit.jade
@@ -132,7 +132,7 @@ ion-modal-view.item-form
             options="modalVm.categorias",
             item = "modalVm.item",
             ng-model="modalVm.item.provider_item_category_id"
-            placeholder='Seleccione la categoria')
+            placeholder='Seleccione una categoría')
 
         label.item.item-input.item-input--no-borders.item-stacked-label
           span.input-label {{::("item.imagen"|translate)}}
