--- a/app/styles/provider/detail.scss
+++ b/app/styles/provider/detail.scss
@@ -1,16 +1,28 @@
 .provider-detail{
+
+  .fondo {
+    box-shadow: inset 0px 6px 16px -4px rgba(250,247,250,1);
+  }
+
   .format-image{
     width: 100%;
     height: 120px;
   }
+
   .details{
     padding: 20px;
+    color:#ffffff;
   }
+
   .grid-parent{
     background: #D8D8D8;
 
     .grid-33{
       width: 33.333%;
+    }
+
+    .cabecera{
+      width: 100%;
     }
 
     .content{
@@ -20,6 +32,10 @@
       .product-detail{
         background: white;
         flex-grow: 1;
+
+        .descripcion{
+          color:#7f7f7f;
+        }
       }
     }
   }
