--- a/app/templates/provider/show.jade
+++ b/app/templates/provider/show.jade
@@ -1,20 +1,21 @@
 ion-view(
-  view-title='{{::("menu.user.provider"|translate)}}'
+view-title='{{::("menu.user.provider"|translate)}}'
 )
   ion-nav-title
     .alt-logo
   ion-content
     .provider-detail
-      .row
+      .row.fondo(style="background-image:url('{{providerDetVm.imagenFondo}}')")
         .col-25
           img.format-image(src='{{providerDetVm.provider.logotipo_url}}')
         .col-75.details
           .nombre {{providerDetVm.provider.razon_social}}
           .descripcion {{providerDetVm.provider.actividad_economica}}
-          .horario {{providerDetVm.provider.horary}}
+          .i.icon.ion-clock  {{providerDetVm.fecha_ap}} - {{providerDetVm.fecha_cie}}
       .grid-parent
-        .content.grid-33(ng-repeat="product in providerDetVm.provider.provider_items")
-            .product-detail(ui-sref='app.categories.provider.product({id:product.id, product:product})')
-              img.format-image(src='{{product.imagenes[0]}}')
-              .descripcion {{product.titulo}}
-              .precio {{product.precio_cents}}
+        .content.cabecera {{providerDetVm.provider.provider_item_categories[0].nombre | uppercase}}
+        .content.grid-33(ng-repeat="product in providerDetVm.provider.provider_item_categories[0].provider_items")
+          .product-detail(ui-sref='app.categories.provider.product({id:product.id, product:product})')
+            img.format-image(src='{{product.imagenes[0].imagen_url}}')
+            .descripcion {{product.titulo | uppercase}}
+            .precio {{product.precio_cents}}
