Profile pr - ErrorsBackend y template responsive del perfil de cliente. (#143)
* editar perfil de customer -- err backend

* perfil de compradore, template

* perfile de cliente - correcciones

* perfil de cliente con clases .col.col-label

* template perfil 90% del boceto - para revisar

* mensajes backens errors and template perfil de cliente

* mejoras en validaciones para actualizar perfil

* corregir indentacion

* .wraper-errors

* validacion de errores en modal, con ng-if

* sin ng-change

* errores en modal sin ng-change

* errores en modal sin ng-if, anexo oservaciones.

* use a decent mm

* revise UI

* revising stuff

meh

* revise UI

--- a/app/styles/profile/profile.scss
+++ b/app/styles/profile/profile.scss
@@ -1,81 +1,39 @@
-.profile-page {
-  margin-top: 1rem;
+.show-profile-page {
+  font-family: Montserrat-Light;
+  overflow: auto;
 
   .profile-header {
-    text-align: center;
-    padding: 2rem;
-    height: 21rem;
-    .user-name {
-      font-family: Montserrat-Light;
-      font-size: 2rem;
-      margin: 2rem;
-      color: $dark;
-
-      @media (max-width: $grid-responsive-md-break) {
-        font-size: 1.2rem;
-        margin: 1rem;
-      }
-    }
-
     .img-profile {
-      height: 12rem;
-      width: 12rem;
+      display: block;
+      margin: auto;
+      max-width: 140px;
+      max-height: 140px;
       border-radius: 50%;
-      margin-top: 1rem;
-
-      @media (max-width: $grid-responsive-md-break) {
-        height: 6rem;
-        width: 6rem;
-      }
-
     }
 
-    @media (max-width: $grid-responsive-md-break) {
-      height: 12rem;
+    .user-name {
+      text-align: center;
+      font-size: 26px;
+      margin: 15px 0;
+      color: $dark;
     }
-
   }
 
-  .profile-body {
+  .actions-wrapper {
+    margin-bottom: 0;
+  }
+}
 
-    .state-tabs {
-      .tab-item {
-        text-transform: uppercase;
-      }
+.addresses-wrapper {
+  // fix scrolling
+  height: auto;
+  bottom: initial;
+  padding-bottom: 20px;
+
+  .address-wrapper {
+    .resource-detail-title {
+      font-size: 18px;
+      margin-bottom: 5px;
     }
-
-    .btn-edit {
-      text-align: center;
-      margin-bottom: 1rem;
-    }
-
-    .row {
-      border-bottom: 0.1rem solid $energized;
-      padding: 0;
-
-      .col {
-        padding-top: 1rem;
-        padding-bottom: 1rem;
-
-        @media (max-width: $grid-responsive-md-break) {
-          margin-bottom: 0;
-        }
-      }
-
-      .col-label {
-        border-right: 0.1rem solid $energized;
-        color: #8f8f8f;
-      }
-
-      .col-value{
-        text-align: center;
-        color: $dark;
-      }
-    }
-
-    .profile-index {
-      margin-top: 2rem;
-    }
-
   }
 }
