--- a/app/templates/profile/info/edit.jade
+++ b/app/templates/profile/info/edit.jade
@@ -24,7 +24,7 @@ ion-modal-view.client-page
             ng-model="piVm.userEdit.custom_image"
             accept="image/*"
           )
-        show-error(array-messages='piVm.user.custom_image')
+        show-error(array-messages='piVm.messages.custom_image')
 
         label.item.item-input.item-stacked-label(
           ng-class="{'item-error': piVm.updateProfileForm.email.$touched && piVm.updateProfileForm.email.$invalid}"
@@ -35,21 +35,18 @@ ion-modal-view.client-page
             name="email"
             ng-model="piVm.userEdit.email"
             ng-class="input-error"
-            required
           )
         .errors-wrapper
-          span.show-errors(ng-messages="piVm.updateProfileForm.email.$error" ng-if="piVm.updateProfileForm.email.$touched")
-            span.message-error(ng-message="required") Campo requerido
-            span.message-error(ng-message="email") E-mail no válido
+          span.show-errors.ng-active(ng-messages="piVm.updateProfileForm.email.$error" ng-if="piVm.updateProfileForm.email.$touched")
+            span.message-error(ng-message="email") {{::("form.wrongEmail"|translate)}}
           show-error(array-messages="piVm.messages.email")
 
         label.item.item-input.item-stacked-label(
           ng-class="{'item-error': piVm.messages.fecha_de_nacimiento}"
         )
-        .item.item-input.item-stacked-label
           span.input-label {{::("user.birthdate"|translate)}}
-          .item(ion-datetime-picker date ng-model='piVm.userEdit.fecha_nacimiento')
-            | {{piVm.userEdit.fecha_nacimiento| date: "yyyy-MM-dd"}}
+        .item(ion-datetime-picker date ng-model='piVm.userEdit.fecha_nacimiento')
+          | {{piVm.userEdit.fecha_nacimiento| date: "yyyy-MM-dd"}}
         show-error(array-messages="piVm.messages.fecha_nacimiento")
 
         label.item.item-input.item-stacked-label(
