--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -16,7 +16,7 @@
 @import "common/footer-stripes";
 @import "common/input_icons";
 @import "common/search-input";
-@import "common/state-tabs";
+@import "common/tabs-striped";
 @import "common/grid";
 @import "common/slick";
 @import "forms/general";
@@ -51,7 +51,6 @@
 @import "products/show";
 @import "products/add-to-wishlist";
 @import "profile/profile";
-@import "profile/profile-addresses";
 @import "profile/profile-addresses-update";
 @import "couriers/orders";
 @import "billing-addresses/billing-addresses";
