Template editar perfil (#159)
* GemFile.lock

* template prefil user con imagen-placeholder

* Gemfile.lock sin win-64

* modal con button-back y ion-footer-stable

* editando perfil - el template

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -52,6 +52,7 @@
 @import "products/add-to-wishlist";
 @import "profile/profile";
 @import "profile/profile-addresses-update";
+@import "profile/profile-edit";
 @import "couriers/orders";
 @import "billing-addresses/billing-addresses";
 @import "offices/show";
