--- a/app/templates/profile/info/edit.jade
+++ b/app/templates/profile/info/edit.jade
@@ -1,33 +1,32 @@
 ion-modal-view.client-page
-  ion-header-bar.bar-stable.bar.bar-header(
-    align-title="center"
-  )
-    .back-button-wrapper
-      span.button.button-clear(
-        ng-click="piVm.closeModal()"
-      )
-        i.icon.ion-android-arrow-back
+  ion-header-bar.bar-stable.bar.bar-header
     .title.alt-logo
+
+    .ion-nav-buttons.buttons(side="primary")
+      button.button.button-clear.button-positive(
+        ng-click="piVm.closeModal()"
+      ) {{::('globals.cancel'|translate)}}
+
   form(
     name="piVm.updateProfileForm"
     ng-submit="piVm.submitProcess(piVm.userEdit)"
     novalidate
   )
-    ion-content.resource-form.item-form
+    ion-content.resource-form
       .list.list-inset
         legend {{::("client.formLegend"|translate)}}
 
-        label.item.item-input.item-stacked-label
+        label.item.item-input.item-input--no-borders.item-stacked-label
           span.input-label {{::("user.image"|translate|uppercase)}}
-          img.uploader(
-            type = "file"
-            ngf-select
-            ng-model = "piVm.userEdit.custom_image"
-            ngf-capture = "'camera'"
-            accept = "image/*"
-          )
-            .img-placeholder
-            .img-placeholder--legend {{::("client.addImage"|translate)}}
+        .picture-uploader(
+          type = "file"
+          ngf-select
+          ng-model = "piVm.userEdit.custom_image"
+          ngf-capture = "'camera'"
+          accept = "image/*"
+        )
+          .img-placeholder
+          .img-placeholder--legend {{::("client.addImage"|translate)}}
         show-error(array-messages='piVm.user.custom_image')
 
         label.item.item-input.item-stacked-label(
@@ -45,13 +44,16 @@ ion-modal-view.client-page
             span.message-error(ng-message="email") {{::("form.wrongEmail"|translate)}}
           show-error(array-messages="piVm.messages.email")
 
-        label.item.item-input.item-stacked-label.input-calendar(
+        label.item.item-input.item-input--no-borders.item-stacked-label(
           ng-class="{'item-error': piVm.messages.fecha_de_nacimiento}"
         )
           span.input-label {{::("user.birthdate"|translate)}}
-        .item.item-icon-left(ion-datetime-picker date ng-model='piVm.userEdit.fecha_nacimiento')
+        ion-datetime-picker.item.item-icon-left.datetime-picker(
+          date
+          ng-model='piVm.userEdit.fecha_nacimiento'
+        )
           i.icon.ion-ios-calendar-outline
-          strong {{piVm.userEdit.fecha_nacimiento| date: "yyyy-MM-dd"}}
+          {{ piVm.userEdit.fecha_nacimiento| date: "yyyy-MM-dd" }}
         show-error(array-messages="piVm.messages.fecha_nacimiento")
 
         label.item.item-input.item-stacked-label(
