--- a/app/styles/resource/details-table.scss
+++ b/app/styles/resource/details-table.scss
@@ -42,11 +42,12 @@
 
       &.label {
         padding-right: 5px;
-        border-right: 1px solid $base-yellow;
+        align-self: flex-end;
       }
 
       &.value {
         padding-left: 5px;
+        border-left: 1px solid $base-yellow;
       }
     }
 
