--- a/app/templates/profile/info/info.jade
+++ b/app/templates/profile/info/info.jade
@@ -8,7 +8,8 @@ ion-content(
 
   .list.list-inset.list--no-borders.resource-details-table
     .row
-      .col.col-50.label {{::("user.name"|translate)}}
+      .col.col-50.label
+        span {{::("user.name"|translate)}}
       .col.col-50.value {{piVm.user.name}}
     .row
       .col.col-50.label {{::("user.email"|translate)}}
@@ -19,6 +20,9 @@ ion-content(
     .row
       .col.col-50.label {{::("user.country"|translate)}}
       .col.col-50.value {{piVm.user.ciudad}}
+    
+  // until we update
+  .list.hide
     .row
       .col.col-50.label {{::("user.password"|translate)}}
       .col.col-50.value ********
