--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -41,6 +41,7 @@
 @import "directives/slick-item";
 @import "categories/index";
 @import "categories/show";
+@import "customer/show";
 @import "item/index";
 @import "item/form";
 @import "item/show";
@@ -52,8 +53,6 @@
 @import "menu/menu";
 @import "products/show";
 @import "products/add-to-wishlist";
-@import "profile/profile";
-@import "profile/profile-addresses-update";
 @import "couriers/orders";
 @import "billing-addresses/billing-addresses";
 @import "offices/show";
