--- a/app/styles/categories/show.scss
+++ b/app/styles/categories/show.scss
@@ -6,7 +6,7 @@
   color: $white;
   .category-title {
     font-size: 28px;
-    font-family: Montserrat-Bold;
+    font-family: Montserrat-SemiBold;
     margin-top: 5rem;
     margin-bottom: 3rem;
     text-align: center;
