tweak category#show UI

--- a/app/styles/categories/show.scss
+++ b/app/styles/categories/show.scss
@@ -1,20 +1,35 @@
-.category-page{
+.category-page {
   font-family: Montserrat-Regular;
   background-origin: content-box;
   background-repeat: no-repeat;
   background-size: cover;
   color: $white;
+
   .category-title {
-    font-size: 28px;
-    font-family: Montserrat-SemiBold;
-    margin-top: 5rem;
-    margin-bottom: 3rem;
-    text-align: center;
-    padding: 0 0.5rem;
-    line-height: 27px;
+    font-family: Montserrat-Bold;
+    font-size: 50px;
+    line-height: 65px;
+    margin-top: 50px;
+    margin-top: 3.5rem;
+    text-align: left;
+    padding: 0 15%;
+    text-transform: uppercase;
+    margin-bottom: 30px;
+
+    @media (max-height: $grid-responsive-md-break) {
+      margin-top: 40px;
+      margin-top: 3rem;
+      padding: 0 12%;
+      font-size: 45px;
+      line-height: 55px;
+    }
   }
+
   .category-description {
     text-align: center;
-    padding: 0 0.5rem;
+    padding: 0 8%;
+    font-size: 18px;
+    line-height: 20px;
+    margin: 30px 0;
   }
 }
