--- a/app/templates/directives/slick-provider/slick-provider.jade
+++ b/app/templates/directives/slick-provider/slick-provider.jade
@@ -1,10 +1,11 @@
-.slick-provider
-  slick-wrapper(settings="spcVm.options.slickSettings")
-    .slick-container(ng-repeat="provider in ::spcVm.providers")
-      .slick-content(ng-click="spcVm.cardClick(provider)")
-        .provider-card
-          .img-container
-            .img(style="background-image: url('{{provider.imagen | defaultImage:'../images/ionic.png'}}')")
-          .provider-card-footer
-            .nombre {{provider.nombre_establecimiento}}
-            .horario {{provider.horario}}
+slick-wrapper.providers-carousel(
+  settings="spcVm.options.slickSettings"
+)
+  .slick-container(ng-repeat="provider in ::spcVm.providers")
+    .slick-content(ng-click="spcVm.cardClick(provider)")
+      .provider-card
+        .img-container
+          .img(style="background-image: url('{{provider.imagen | defaultImage:'../images/ionic.png'}}')")
+        .provider-card-footer
+          .nombre {{provider.nombre_establecimiento}}
+          .horario {{provider.horario}}
