--- a/app/styles/categories/index.scss
+++ b/app/styles/categories/index.scss
@@ -18,7 +18,6 @@
     display: inline-block;
 
     display: flex;
-    margin: 1px 0;
     text-decoration: none;
     height: 150px;
     background-origin: content-box;
@@ -28,6 +27,8 @@
     align-items: center;
     justify-content: center;
     background-position: 50%;
+    background-color: $gridShadowColor;
+    border: 1px solid $white;
 
     &.grid-50 .title {
       font-size: 20px;
@@ -39,12 +40,11 @@
       line-height: 30px;
     }
 
-    .title{
+    .title {
       text-transform: uppercase;
       font-family: Montserrat-SemiBold;
       color: $white;
       text-align: center;
-      text-shadow: 1px 1px 1px rgba(0,0,0,.2);
       padding: 0 5px;
     }
 
