--- a/app/styles/directives/providers-carousel.scss
+++ b/app/styles/directives/providers-carousel.scss
@@ -1,4 +1,4 @@
-.slick-provider {
+.providers-carousel {
   .slick-container {
     .slick-content {
       text-align: center;
@@ -7,6 +7,7 @@
         background-color: $white;
         min-height: 350px;
         max-width: 250px;
+        min-width: 240px;
         margin: 5px auto;
         color: $base-grey;
         position: relative;
