rename slick-provider directive to providers-carousel

--- a/app/templates/category/show.jade
+++ b/app/templates/category/show.jade
@@ -8,4 +8,4 @@ ion-view(
   )
     .category-title.grid-text-shadow {{categoryVm.category.titulo}}
     .category-description.grid-text-shadow {{categoryVm.category.descripcion}}
-    slick-provider(options="categoryVm.options")
+    providers-carousel(options="categoryVm.options")
