tweaking UI for providers carousel

--- a/app/styles/colors/colors.scss
+++ b/app/styles/colors/colors.scss
@@ -2,6 +2,7 @@ $white: #fff;
 $base-yellow: #FDC30D;
 $base-blue: #9ecaed;
 $base-grey: #6A6A6D;
+$grey-secondary: #999;
 $button-red: #D0021B;
 $button-blue: #2D3986;
 $search-label-grey: #C3C3C3;
