--- a/app/styles/directives/providers-carousel.scss
+++ b/app/styles/directives/providers-carousel.scss
@@ -1,32 +1,42 @@
 .providers-carousel {
   .slick-container {
     .slick-content {
+      margin: 10px 0 10px 20px;
       text-align: center;
-      margin: 5px;
+
       .provider-card {
         background-color: $white;
-        min-height: 350px;
+        min-height: 300px;
         max-width: 250px;
         min-width: 240px;
         margin: 5px auto;
         color: $base-grey;
         position: relative;
         cursor: pointer;
+        padding: 5px 10px;
+
         .img-container {
-          height: 280px;
-          .img {
-            width: 100%;
-            height: 100%;
-            background-repeat: no-repeat;
-            background-position: center;
+          height: 250px;
+          display: flex;
+          align-items: center;
+          margin-bottom: 5px;
+
+          img {
+            max-width: 100%;
+            max-height: 100%;
           }
         }
+
         &-footer {
-          height: 70px;
           text-align: left;
-          padding: 0 1rem;
+          font-family: Montserrat-Regular;
+          font-size: 16px;
+
           .nombre {
-            opacity: 0.7;
+            color: $grey-secondary;
+          }
+          .horario {
+            color: $base-grey;
           }
         }
       }
